// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`array-pattern.ts format 1`] = `
====================================options=====================================
cursorOffset: 6
parsers: ["typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
let []<|>: T = [];

=====================================output=====================================
let []<|>: T = [];

================================================================================
`;

exports[`arrow-function-type.ts format 1`] = `
====================================options=====================================
cursorOffset: 14
parsers: ["typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
type foo = () <|>=> boolean;

=====================================output=====================================
type foo = () <|>=> boolean;

================================================================================
`;

exports[`class-property.ts format 1`] = `
====================================options=====================================
cursorOffset: 15
parsers: ["typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
class A {
  foo<|>: A
}

=====================================output=====================================
class A {
  foo<|>: A;
}

================================================================================
`;

exports[`function-return-type.ts format 1`] = `
====================================options=====================================
cursorOffset: 12
parsers: ["typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
function a()<|>: boolean {}

=====================================output=====================================
function a()<|>: boolean {}

================================================================================
`;

exports[`identifier-1.ts format 1`] = `
====================================options=====================================
cursorOffset: 5
parsers: ["typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
let i<|>: T;

=====================================output=====================================
let i<|>: T;

================================================================================
`;

exports[`identifier-2.ts format 1`] = `
====================================options=====================================
cursorOffset: 6
parsers: ["typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
let i:<|> T;

=====================================output=====================================
let i:<|> T;

================================================================================
`;

exports[`identifier-3.ts format 1`] = `
====================================options=====================================
cursorOffset: 5
parsers: ["typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
let i<|> : T;

=====================================output=====================================
let i<|>: T;

================================================================================
`;

exports[`method-signature.ts format 1`] = `
====================================options=====================================
cursorOffset: 21
parsers: ["typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
interface A {
  foo()<|>: T;
}

=====================================output=====================================
interface A {
  foo()<|>: T;
}

================================================================================
`;

exports[`property-signature.ts format 1`] = `
====================================options=====================================
cursorOffset: 19
parsers: ["typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
interface A {
  foo<|>: T;
}

=====================================output=====================================
interface A {
  foo<|>: T;
}

================================================================================
`;

exports[`rest.ts format 1`] = `
====================================options=====================================
cursorOffset: 20
parsers: ["typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
function foo(...args<|>: any) { }

=====================================output=====================================
function foo(...args<|>: any) {}

================================================================================
`;
